--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@
 
 # production
 /build
+out
+.next
 
 # misc
 .DS_Store
+.eslintcache
+.idea
 /.env
 /.env.local
 /.env.development.local
@@ -22,5 +26,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.eslintcache
